# trenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: fragment1.glsl  generic_light_types_fragment.glsl  gouraud_fragment.glsl  gouraud_vertex.glsl  light_types_fragment.glsl  light_types_spot_fragment.glsl  light_types_spot_soft_fragment.glsl  light_types_spot_soft_vertex.glsl  lightbox_vertex.glsl  lightmap_fragment.glsl  material_fragment.glsl  phong_fragment.glsl  phong_vertex.glsl  shader_.glsl  shader_fragment1.glsl  vertex1.glsl
src/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  main.cpp
